[bdist_wheel]
universal = 1

[metadata]
name = galbi
version = attr: galbi.__version__
description = Galbi CLI
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    click>=7.1.2
    requests>=2.25.0

[options.entry_points]
console_scripts =
    galbi = galbi.cli:main
